--- a/package.json
+++ b/package.json
@@ -1,33 +1,77 @@
 {
   "name": "jadwal-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend system for employee schedule management with Excel import and month filtering",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node ./app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "postinstall": "npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "clean": "rimraf dist",
+    "migrate:images": "ts-node scripts/migrationHelper.ts",
+    "migrate:images:stats": "ts-node scripts/migrationHelper.ts stats",
+    "migrate:images:start": "ts-node scripts/migrationHelper.ts migrate",
+    "migrate:images:force": "ts-node scripts/migrationHelper.ts migrate --force",
+    "migrate:images:retry": "ts-node scripts/migrationHelper.ts retry"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "schedule",
+    "employee",
+    "excel",
+    "mongodb",
+    "nodejs",
+    "typescript",
+    "rest-api"
+  ],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.10.0",
-    "bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.11.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.16.4",
-    "multer": "^2.0.2",
-    "xlsx": "^0.18.5"
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.0.15",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  }
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/imagekit": "^3.2.0",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/butonG21/jadwal-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/butonG21/jadwal-backend/issues"
+  },
+  "homepage": "https://github.com/butonG21/jadwal-backend#readme"
 }
