--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postinstall": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint": "eslint **/*.ts",
+    "lint:fix": "eslint **/*.ts --fix",
     "clean": "rimraf dist",
     "migrate:images": "ts-node scripts/migrationHelper.ts",
     "migrate:images:stats": "ts-node scripts/migrationHelper.ts stats",
@@ -31,7 +31,13 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/imagekit": "^3.2.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.5.0",
     "axios": "^1.11.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -43,16 +49,10 @@
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
-    "xlsx": "^0.18.5",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/imagekit": "^3.2.0",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
