--- a/package.json
+++ b/package.json
@@ -39,20 +39,28 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.0",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
     "helmet": "^7.0.0",
     "imagekit": "^6.0.0",
+    "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^7.5.0",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "typescript": "^5.1.6",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.10",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
