--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.0",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
@@ -54,6 +55,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.2",
     "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
     "typescript": "^5.1.6",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5"
