fix(webhook): make deployment path configurable via env var
- Replace hardcoded path with dynamic resolution using PROJECT_PATH env var
- Set working directory for script execution to project root
- Add documentation for path configuration in .env.example
- Include troubleshooting guide in DEPLOYMENT_PATH_FIX.md

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,14 @@ ATTENDANCE_CRON_ENABLED=true
 CRON_AUTH_USERNAME=2405047
 CRON_AUTH_PASSWORD=@qwerty12345
 
+# Deployment Configuration
+# Project path on VPS (for webhook deployment)
+# Default: $HOME/shiftly/jadwal-backend
+PROJECT_PATH=/home/username/shiftly/jadwal-backend
+
+# GitHub Webhook Configuration
+GITHUB_WEBHOOK_SECRET=your-github-webhook-secret
+
 # Railway Configuration (for deployment)
 # These will be automatically set by Railway
 # RAILWAY_ENVIRONMENT=production
